<resources>
    <string name="app_name">FragmentKu</string>

    <string name="this_profile">Ini Activity Profile</string>
    <string name="this_category">Ini Fragment Category</string>
    <string name="category_lifestyle">Ke Fragment Lifestyle</string>
    <string name="category_name">Category Nama</string>
    <string name="category_description">Category Deskripsi</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan sebuah Dialog</string>
    <string name="hello_home_fragment">Ini Home Fragment</string>
    <string name="to_category">Ke Fragment Category</string>
    <string name="question_hero">Siapa Hero favoritmu</string>
    <string name="ezio_auditore_da_firenze">Ezio Auditore da Firenze</string>
    <string name="altair_ibn_lahab">Altair ibn Lahab</string>
    <string name="gilgamesh">Gilgamesh</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>